// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EscrowTimelinePanel > matches snapshot for disputed state 1`] = `
<DocumentFragment>
  <section
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
    data-testid="escrow-timeline-panel"
  >
    <p
      class="text-sm font-semibold uppercase tracking-[0.2em] text-slate-500"
    >
      Escrow Timeline
    </p>
    <ol
      class="mt-6 space-y-6 border-l border-slate-200 pl-8"
    >
      <li
        class="relative"
        data-latest="true"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-sky-200 bg-white text-sky-700"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pause"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="1"
              width="5"
              x="14"
              y="3"
            />
            <rect
              height="18"
              rx="1"
              width="5"
              x="5"
              y="3"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-sky-200 bg-sky-50 text-slate-900"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Dispute raised
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T10:00:00.000Z"
            >
              2 hours ago
            </time>
          </div>
        </div>
      </li>
      <li
        class="relative"
        data-latest="false"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-slate-200 bg-slate-50 text-slate-500"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wallet"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-600 opacity-75"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow funded
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T08:00:00.000Z"
            >
              4 hours ago
            </time>
          </div>
          <div
            class="mt-3"
          >
            <div
              class="flex flex-wrap items-center gap-3"
              data-testid="stellar-tx-link"
            >
              <a
                class="text-sm font-semibold text-sky-700 underline underline-offset-4"
                href="https://stellar.expert/explorer/testnet/tx/abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890"
                rel="noreferrer"
                target="_blank"
              >
                abcdef12...34567890
              </a>
              <button
                class="rounded-full border border-slate-300 px-3 py-1 text-xs font-semibold text-slate-700"
                type="button"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
      </li>
      <li
        class="relative"
        data-latest="false"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-slate-200 bg-slate-50 text-slate-500"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-600 opacity-75"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow created
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T06:00:00.000Z"
            >
              6 hours ago
            </time>
          </div>
        </div>
      </li>
    </ol>
  </section>
</DocumentFragment>
`;

exports[`EscrowTimelinePanel > matches snapshot for funded state 1`] = `
<DocumentFragment>
  <section
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
    data-testid="escrow-timeline-panel"
  >
    <p
      class="text-sm font-semibold uppercase tracking-[0.2em] text-slate-500"
    >
      Escrow Timeline
    </p>
    <ol
      class="mt-6 space-y-6 border-l border-slate-200 pl-8"
    >
      <li
        class="relative"
        data-latest="true"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-sky-200 bg-white text-sky-700"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wallet"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-sky-200 bg-sky-50 text-slate-900"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow funded
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T10:00:00.000Z"
            >
              2 hours ago
            </time>
          </div>
          <div
            class="mt-3"
          >
            <div
              class="flex flex-wrap items-center gap-3"
              data-testid="stellar-tx-link"
            >
              <a
                class="text-sm font-semibold text-sky-700 underline underline-offset-4"
                href="https://stellar.expert/explorer/testnet/tx/abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890"
                rel="noreferrer"
                target="_blank"
              >
                abcdef12...34567890
              </a>
              <button
                class="rounded-full border border-slate-300 px-3 py-1 text-xs font-semibold text-slate-700"
                type="button"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
      </li>
      <li
        class="relative"
        data-latest="false"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-slate-200 bg-slate-50 text-slate-500"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-600 opacity-75"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow created
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T06:00:00.000Z"
            >
              6 hours ago
            </time>
          </div>
        </div>
      </li>
    </ol>
  </section>
</DocumentFragment>
`;

exports[`EscrowTimelinePanel > matches snapshot for settled state 1`] = `
<DocumentFragment>
  <section
    class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm"
    data-testid="escrow-timeline-panel"
  >
    <p
      class="text-sm font-semibold uppercase tracking-[0.2em] text-slate-500"
    >
      Escrow Timeline
    </p>
    <ol
      class="mt-6 space-y-6 border-l border-slate-200 pl-8"
    >
      <li
        class="relative"
        data-latest="true"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-sky-200 bg-white text-sky-700"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-sky-200 bg-sky-50 text-slate-900"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow settled
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T11:30:00.000Z"
            >
              30 minutes ago
            </time>
          </div>
          <div
            class="mt-3"
          >
            <div
              class="flex flex-wrap items-center gap-3"
              data-testid="stellar-tx-link"
            >
              <a
                class="text-sm font-semibold text-sky-700 underline underline-offset-4"
                href="https://stellar.expert/explorer/testnet/tx/abcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890"
                rel="noreferrer"
                target="_blank"
              >
                abcdef12...34567890
              </a>
              <button
                class="rounded-full border border-slate-300 px-3 py-1 text-xs font-semibold text-slate-700"
                type="button"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
      </li>
      <li
        class="relative"
        data-latest="false"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-slate-200 bg-slate-50 text-slate-500"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-pause"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="1"
              width="5"
              x="14"
              y="3"
            />
            <rect
              height="18"
              rx="1"
              width="5"
              x="5"
              y="3"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-600 opacity-75"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Dispute resolved
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T10:00:00.000Z"
            >
              2 hours ago
            </time>
          </div>
        </div>
      </li>
      <li
        class="relative"
        data-latest="false"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-slate-200 bg-slate-50 text-slate-500"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-wallet"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
            />
            <path
              d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-600 opacity-75"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow funded
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T08:00:00.000Z"
            >
              4 hours ago
            </time>
          </div>
        </div>
      </li>
      <li
        class="relative"
        data-latest="false"
      >
        <div
          aria-hidden="true"
          class="absolute -left-4 top-0 flex h-8 w-8 items-center justify-center rounded-full border border-slate-200 bg-slate-50 text-slate-500"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </div>
        <div
          class="rounded-2xl border p-4 border-slate-200 bg-white text-slate-600 opacity-75"
        >
          <div
            class="flex flex-wrap items-start justify-between gap-2"
          >
            <p
              class="text-sm font-semibold"
            >
              Escrow created
            </p>
            <time
              class="text-xs font-medium text-slate-500"
              datetime="2026-03-25T06:00:00.000Z"
            >
              6 hours ago
            </time>
          </div>
        </div>
      </li>
    </ol>
  </section>
</DocumentFragment>
`;
